--- a/smartcast.cfg
+++ b/smartcast.cfg
@@ -1,19 +1,16 @@
 //Release-to-cast script for Dota 2
 
 //Keybindings
-bind 	"a"			"+sCast_A1"	// Ability 1
-bind 	"z"			"+sCast_A2"	// Ability 2
-bind 	"e"			"+sCast_A3"	// Ability 3
-bind 	"d"			"+sCast_A4"	// Ability 4
-bind 	"f"			"+sCast_A5"	// Ability 5
-bind 	"r"			"+sCast_A6"	// Ultimate
-bind 	"q"			"+sCast_I1"	// Item 1
-bind 	"s"			"+sCast_I2"	// Item 2
-bind 	"d"			"+sCast_I3"	// Item 3
-bind 	"w"			"+sCast_I4"	// Item 4
-bind 	"x"			"+sCast_I5"	// Item 5
-bind 	"c"			"+sCast_I6"	// Item 6
-//Keeping it standard for SC legacy, feel free to adapt
-//bind 	"5"			"+sCast_Atk"	// Attack
-//bind 	"6"			"+sCast_Move"	// Move
+bind 	"a"			"dota_ability_execute 0"	// Ability 1
+bind 	"z"			"dota_ability_execute 1"	// Ability 2
+bind 	"e"			"dota_ability_execute 2"	// Ability 3
+bind 	"d"			"dota_ability_execute 3"	// Ability 4
+bind 	"f"			"dota_ability_execute 4"	// Ability 5
+bind 	"r"			"dota_ability_execute 5"	// Ultimate
+bind 	"q"			"dota_item_execute 0"	// Item 1
+bind 	"s"			"dota_item_execute 1"	// Item 2
+bind 	"d"			"dota_item_execute 2"	// Item 3
+bind 	"w"			"dota_item_execute 3"	// Item 4
+bind 	"x"			"dota_item_execute 4"	// Item 5
+bind 	"c"			"dota_item_execute 5"	// Item 6
 
