Fix rune checking

--- a/misc.cfg
+++ b/misc.cfg
@@ -7,9 +7,5 @@ dota_camera_disable_zoom "1"
 //fps
 fps_max 200
 
-alias "+toprune" "dota_camera_set_lookatpos -2273 1800"        // Shows top rune while holding the key and centers on hero upon release
-alias "-toprune" "+dota_camera_center_on_hero"
-alias "+botrune" "dota_camera_set_lookatpos 3035 -2350"        // Shows bot rune while holding the key and centers on hero upon release
-alias "-botrune" "+dota_camera_center_on_hero"
-bind "F5" "+toprune"
-bind "F6" "+botrune"
+bind "F5" "dota_camera_set_lookatpos -2273 1800"        // Shows top rune while holding the key and centers on hero upon release
+bind "F6" "dota_camera_set_lookatpos 3035 -2350"        // Shows bot rune while holding the key and centers on hero upon release
