Move smartcast file to cast

--- a/casthandler.cfg
+++ b/casthandler.cfg
@@ -1,4 +1,4 @@
 //Hold space to selfcast
 alias +keyShift "exec selfcast"
-alias -keyShift "exec smartcast"
+alias -keyShift "exec cast"
 bind "SPACE" "+keyShift"
